--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="sock-item-1"></div>
-      <div class="sock-item-2"></div>
+      <div class="sock-item sock-item-1"></div>
+      <div class="sock-item sock-item-2"></div>
+      <div class="sock-item sock-item-3"></div>
     </div>
   </body>
 </html>
